--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "alheimsins.net website",
   "main": "index.js",
   "scripts": {
+    "test-all": "standard && nsp check && ava",
+    "test": "standard && ava",
+    "coverage": "nyc ava",
+    "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
+    "standard-fix": "standard --fix",
     "dev": "next",
     "build": "next build",
     "start": "next start",
@@ -18,8 +23,8 @@
     "alheimsins"
   ],
   "author": {
-    "name": "alheimsins",
-    "email": "post@alheimsins.net",
+    "name": "Jonas Enge",
+    "email": "jonas.enge@gmail.com",
     "url": "https://github.com/maccyber"
   },
   "contributors": [
@@ -31,13 +36,20 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/maccyber/alheimsins.net/issues"
+    "url": "https://github.com/alheimsins/alheimsins.net/issues"
   },
-  "homepage": "https://github.com/maccyber/alheimsins.net#readme",
+  "homepage": "https://github.com/alheimsins/alheimsins.net#readme",
   "dependencies": {
-    "next": "^4.0.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "next": "4.0.3",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
+  },
+  "devDependencies": {
+    "ava": "0.22.0",
+    "coveralls": "3.0.0",
+    "nsp": "2.8.1",
+    "nyc": "11.2.1",
+    "standard": "10.0.3"
   },
   "now": {
     "alias": "alheimsins.net"
