Implements latest changes/commits

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/alheimsins/alheimsins.net#readme",
   "dependencies": {
+    "axios": "0.16.2",
     "next": "4.0.3",
     "react": "16.0.0",
     "react-dom": "16.0.0"
