--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gather-data": "node gather-data.js",
     "build": "next build",
     "start": "next start",
-    "deploy": "npm run gather-data && npm test && next build && next export && now --public --static out/ --name alheimsins.net && now alias",
+    "deploy": "npm run gather-data && npm test && next build && next export && now --static out/ --name alheimsins.net && now alias",
     "export": "next build && next export"
   },
   "repository": {
