--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "alheimsins.net website",
   "main": "index.js",
   "scripts": {
-    "test": "standard && nsp check && ava",
+    "test": "standard && npm audit && ava",
     "test-offline": "standard && ava",
     "coverage": "nyc ava",
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
@@ -14,7 +14,8 @@
     "build": "next build",
     "start": "next start",
     "deploy": "npm run gather-data && npm test && next build && next export && now --static out/ --name alheimsins.net && now alias",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "repository": {
     "type": "git",
@@ -49,7 +50,6 @@
   "devDependencies": {
     "ava": "1.2.0",
     "coveralls": "3.0.2",
-    "nsp": "3.2.1",
     "nyc": "13.1.0",
     "standard": "12.0.1"
   },
