--- a/package.json
+++ b/package.json
@@ -49,9 +49,23 @@
   },
   "devDependencies": {
     "ava": "1.2.0",
+    "babel-eslint": "10.0.1",
     "coveralls": "3.0.2",
     "nyc": "13.1.0",
     "standard": "12.0.1"
+  },
+  "standard": {
+    "ignore": [
+      "/static/*.js"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true,
+        "jsx": true
+      },
+      "sourceType": "module"
+    }
   },
   "now": {
     "alias": "alheimsins.net"
