--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "axios": "0.18.0",
     "next": "8.0.4",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "ava": "1.4.1",
