--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alheimsins.net",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "alheimsins.net website",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,6 @@
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "standard-fix": "standard --fix",
     "dev": "next",
-    "gather-data": "node gather-data.js",
     "build": "next build",
     "start": "next start",
     "deploy": "npm test && now && now alias",
@@ -44,16 +43,15 @@
   "homepage": "https://github.com/alheimsins/alheimsins.net#readme",
   "dependencies": {
     "axios": "0.18.0",
-    "next": "8.0.4",
+    "next": "8.1.0",
     "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "uuid": "^3.3.2"
+    "react-dom": "16.8.6"
   },
   "devDependencies": {
     "ava": "1.4.1",
     "babel-eslint": "10.0.1",
     "coveralls": "3.0.3",
-    "nyc": "13.3.0",
+    "nyc": "14.0.0",
     "standard": "12.0.1"
   },
   "standard": {
