--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "deploy": "npm test && now && now alias",
+    "deploy": "npm test && now --prod",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "repository": {
